# im_bot

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.bot  PROGRESS.md  README.md  TASKS.md  USER_GUIDE.md  compose.yml  pyproject.toml  run-task.sh  setup.sh  start-bot.sh  start.sh  tasks.md  users.yaml.example
src/im_bot_email/: __init__.py  __main__.py  config.py  executor.py  listener.py  oauth2.py  parser.py  queue_manager.py  replier.py
tests/: test_executor.py  test_listener.py  test_parser.py  test_replier.py  test_threading.py  test_whitelist.py
